fix: AccountPage -> z-index

--- a/Event_Tracker_App/Event.Tracker.Web/src/pages/Account.css
+++ b/Event_Tracker_App/Event.Tracker.Web/src/pages/Account.css
@@ -7,7 +7,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    z-index: 10;
+    z-index: 15;
     padding-top: 10vh;
 
     overflow: auto;
